--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "QA-task",
+  "name": "qa-task",
   "version": "1.0.0",
   "description": "Podbase QA technical task, if you're stuck - contact vilius@podbase.com",
   "main": "src/index.ts",
